--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@
             id="iits-fb-link" ><i class="fa-brands fa-facebook"></i
           ></a>
           <!-- 
+                Change the instagram link to your profile link using js [TASK]
+             -->
+             <a href="https://www.instagram.com/yourProfile" target="_blank"
+             id="iits-ig-link" ><i class="fa-brands fa-instagram"></i
+           ></a>          
+          <!-- 
                 Change the email address to your address using js [TASK]
              -->
           <a href="mailto:yourmail@gmail.com" class="text-dark" target="_blank"
